# rtc

./: .gitignore  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
src/: i2c.c  i2c.h  log.c  log.h  main.c  rtc.c  rtc.h  rtc_bison.y  rtc_flex.l  rtc_parser.c  rtc_parser.h
src/tests/: test_cli.sh
